--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,60 +152,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Mouse ID              1893\n",
-       "Drug Regimen          1893\n",
-       "Sex                   1893\n",
-       "Age_months            1893\n",
-       "Weight (g)            1893\n",
-       "Timepoint             1893\n",
-       "Tumor Volume (mm3)    1893\n",
-       "Metastatic Sites      1893\n",
-       "dtype: int64"
+       "249"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Checking the number of mice.\n",
-    "merged_mousedata.count()"
+    "merged_mousedata['Mouse ID'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>g989</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Mouse ID               249\n",
-       "Drug Regimen            10\n",
-       "Sex                      2\n",
-       "Age_months              24\n",
-       "Weight (g)              16\n",
-       "Timepoint               10\n",
-       "Tumor Volume (mm3)    1644\n",
-       "Metastatic Sites         5\n",
-       "dtype: int64"
+       "          Drug Regimen  Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "Mouse ID                                                         \n",
+       "g989                 5    5           5           5          5   \n",
+       "\n",
+       "          Tumor Volume (mm3)  Metastatic Sites  \n",
+       "Mouse ID                                        \n",
+       "g989                       5                 5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Getting the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
-    "merged_mousedata.nunique()"
+    "duplicate_mousedata = merged_mousedata[merged_mousedata.duplicated(['Mouse ID', 'Timepoint'])]\n",
+    "duplicate_mousedata = duplicate_mousedata.groupby(['Mouse ID'])\n",
+    "duplicate_mousedata."
    ]
   },
   {
@@ -220,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -310,27 +355,157 @@
        "      <td>45.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>s508</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>f966</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>m546</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>z578</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>j913</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>u364</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>n364</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>y793</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>r554</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>m957</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "0      k403     Ramicane    Male          21          16          0   \n",
-       "10     s185    Capomulin  Female           3          17          0   \n",
-       "20     x401    Capomulin  Female          16          15          0   \n",
-       "30     m601    Capomulin    Male          22          17          0   \n",
-       "40     g791     Ramicane    Male          11          16          0   \n",
+       "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "0       k403     Ramicane    Male          21          16          0   \n",
+       "10      s185    Capomulin  Female           3          17          0   \n",
+       "20      x401    Capomulin  Female          16          15          0   \n",
+       "30      m601    Capomulin    Male          22          17          0   \n",
+       "40      g791     Ramicane    Male          11          16          0   \n",
+       "50      s508     Ramicane    Male           1          17          0   \n",
+       "60      f966    Capomulin    Male          16          17          0   \n",
+       "65      m546     Ramicane    Male          18          16          0   \n",
+       "75      z578     Ramicane    Male          11          16          0   \n",
+       "85      j913     Ramicane  Female           4          17          0   \n",
+       "95      u364    Capomulin    Male          18          17          0   \n",
+       "105     n364     Ramicane    Male           4          17          0   \n",
+       "115     y793    Capomulin    Male          17          17          0   \n",
+       "125     r554    Capomulin  Female           8          17          0   \n",
+       "135     m957    Capomulin  Female           3          19          0   \n",
        "\n",
-       "    Tumor Volume (mm3)  Metastatic Sites  \n",
-       "0                 45.0                 0  \n",
-       "10                45.0                 0  \n",
-       "20                45.0                 0  \n",
-       "30                45.0                 0  \n",
-       "40                45.0                 0  "
+       "     Tumor Volume (mm3)  Metastatic Sites  \n",
+       "0                  45.0                 0  \n",
+       "10                 45.0                 0  \n",
+       "20                 45.0                 0  \n",
+       "30                 45.0                 0  \n",
+       "40                 45.0                 0  \n",
+       "50                 45.0                 0  \n",
+       "60                 45.0                 0  \n",
+       "65                 45.0                 0  \n",
+       "75                 45.0                 0  \n",
+       "85                 45.0                 0  \n",
+       "95                 45.0                 0  \n",
+       "105                45.0                 0  \n",
+       "115                45.0                 0  \n",
+       "125                45.0                 0  \n",
+       "135                45.0                 0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +513,7 @@
    "source": [
     "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
     "cleaned_mousedata = merged_mousedata.drop_duplicates('Mouse ID')\n",
-    "cleaned_mousedata.head()"
+    "cleaned_mousedata.head(15)"
    ]
   },
   {
@@ -379,19 +554,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'DataFrameGroupBy' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-3eb5847a4950>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mst_dev\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted_mousedata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Tumor Volume (mm3)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mm_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted_mousedata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Tumor Volume (mm3)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0msem\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted_mousedata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Tumor Volume (mm3)'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;31m# Assemble the resulting series into a single summary dataframe.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0msummary_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'Mean'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Median'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mmedian\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Variance'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mm_var\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'St. Dev'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mst_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'SEM'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0msem\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'DataFrameGroupBy' object is not callable"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>St. Dev</th>\n",
+       "      <th>SEM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Mean  Median  Variance  St. Dev  SEM\n",
+       "Drug Regimen                                      \n",
+       "Capomulin     45.0    45.0       0.0      0.0  0.0\n",
+       "Ceftamin      45.0    45.0       0.0      0.0  0.0\n",
+       "Infubinol     45.0    45.0       0.0      0.0  0.0\n",
+       "Ketapril      45.0    45.0       0.0      0.0  0.0\n",
+       "Naftisol      45.0    45.0       0.0      0.0  0.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -401,12 +660,12 @@
     "sorted_mousedata = cleaned_mousedata.groupby(['Drug Regimen'])\n",
     "\n",
     "mean = cleaned_mousedata.groupby('Drug Regimen')['Tumor Volume (mm3)'].mean()\n",
-    "median = sorted_mousedata['Tumor Volume (mm3)'].median()\n",
-    "st_dev = sorted_mousedata['Tumor Volume (mm3)'].std()\n",
-    "m_var = sorted_mousedata['Tumor Volume (mm3)'].var()\n",
-    "m_sem = sorted_mousedata('Tumor Volume (mm3)').sem()\n",
+    "median = cleaned_mousedata.groupby('Drug Regimen')['Tumor Volume (mm3)'].median()\n",
+    "st_dev = cleaned_mousedata.groupby('Drug Regimen')['Tumor Volume (mm3)'].std()\n",
+    "m_var = cleaned_mousedata.groupby('Drug Regimen')['Tumor Volume (mm3)'].var()\n",
+    "m_sem = cleaned_mousedata.groupby('Drug Regimen')['Tumor Volume (mm3)'].sem()\n",
     "# Assemble the resulting series into a single summary dataframe.\n",
-    "summary_table = pd.DataFrame({'Mean':mean, 'Median':median, 'Variance':m_var, 'St. Dev':st_dev, 'SEM':sem})\n",
+    "summary_table = pd.DataFrame({'Mean':mean, 'Median':median, 'Variance':m_var, 'St. Dev':st_dev, 'SEM':m_sem})\n",
     "summary_table.head()"
    ]
   },
