removed extraneous starter file

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Infubinol would appear to have the least efficacy based on its greater skews in tumor size compared to the other treatments. However, it should also be noted that \n",
+    "1. Infubinol would appear to have the least efficacy based on its greater skews in tumor size compared to the other treatments. However, it should also be noted that Infubinol's sample size is smaller than some of its counterparts, and its range in final tumor volumes is quite large.\n",
     "2. It generally appears that weight and average tumor volume are positively correlated in regard to Capomulin treatment. This could be a limitation in human efficacy, creating a maximum weight a person could be for positive treatment results.\n",
     "3. Still, Capomulin is one of the more promising treatments of the four examined, having lower final tumor volume and two outliers in its dataset that are even lower than the general skew."
    ]
